<resources>
    <string name="app_name">ThinkPad</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="hide_details">Hide a file Locked</string>
    <string name="hide_lock">Hide Locked Items</string>
    <string name="password_summary">Set a Password</string>
    <string name="set_password">Password</string>
    <string name="display_format">Display Time Format</string>
    <string name="display_type">Format to display Time</string>
    <string name="default_title">Sort Order</string>
    <string name="default_sort">Default Sort Order</string>
    <string name="new_folder">New Folder</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
</resources>
